fix: code line number not align

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -70,9 +70,9 @@
 
   code {
     padding: 0 $padding-4;
-    background: var(--gray-200);
+    background: rgba(232, 232, 232, 0.841);
     border-radius: $border-radius;
-    font-size: 0.875em;
+    // font-size: 0.875em;
   }
 
   pre {
